# PetsProject

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  test.db
Backend/: pytest.ini
Backend/app/: config.py  database.py  database_sync.py  dependencies.py  main.py  redis_client.py
Backend/app/crud/: __init__.py  breed.py  pet.py  user.py
Backend/app/models/: __init__.py  breed.py  pet.py  user.py
Backend/app/routers/: breed.py  pet.py  user.py
Backend/app/schemas/: breed.py  pet.py  user.py
Backend/app/services/: qr.py
Backend/app/tests/: conftest.py  maintest.py  test_main.py  test_pet.py  test_user.py
Backend/app/utils/: jwt_handler.py
Backend/tests/: conftest.py  test_user.py
alembic/: env.py
alembic/versions/: 2e387503d833_initial_migration.py  432c4e8cae0e_init.py  5c47ed02c0d6_init.py  bbac296e3aa0_change_description_to_text.py
backend/: Dockerfile
backend/app/: celery_worker.py  config.py  database.py  dependencies.py  main.py
backend/app/crud/: breed.py  user.py
backend/app/models/: breed.py  pet.py  user.py
backend/app/routers/: breed.py
backend/app/schemas/: __init__.py  pet.py  user.py
backend/tests/: conftest.py  test_breed.py  test_pets.py  test_user.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  Header.jsx  Navbar.jsx
frontend/src/pages/: Adoption.jsx  Breeds.jsx  Home.jsx  MyPets.jsx  Registration.jsx  Training.jsx
