[tool.poetry]
name = "petsproject"
version = "0.1.0"
description = ""
authors = ["Gol-Stan <loww.101011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
python-dotenv = "^1.1.1"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
celery = {extras = ["redis"], version = "^5.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
