[tool.poetry]
name = "petsproject"
version = "0.1.0"
description = ""
authors = ["Gol-Stan <loww.101011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.118.0"}
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
python-dotenv = "^1.1.1"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
celery = {extras = ["redis"], version = "^5.5.3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
email-validator = "^2.3.0"
asyncpg = "^0.30.0"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
